@@ -10,7 +10,12 @@
       <li id="sb_admin_ut_BrowseUsers"><a href="<?php echo $web_path; ?>/admin/users.php"><?php echo _('Browse Users'); ?></a></li>
     </ul>
   </li>
-
+  <li><h4><?php echo _('Access Control'); ?></h4>
+    <ul class="sb3" id="sb_admin_acl">
+      <li id="sb_admin_acl_AddAccess"><a href="<?php echo $web_path; ?>/admin/access.php?action=show_add_host"><?php echo _('Add ACL'); ?></li>
+      <li id="sb_admin_acl_ShowAccess"><a href="<?php echo $web_path; ?>/admin/access.php"><?php echo _('Show ACL(s)'); ?></a>
+    </ul>
+  </li>
   <li><h4><?php echo _('Other Tools'); ?></h4>
     <ul class="sb3" id="sb_admin_ot">
       <li id="sb_admin_ot_ClearNowPlaying"><a href="<?php echo $web_path; ?>/admin/catalog.php?action=clear_now_playing"><?php echo _('Clear Now Playing'); ?></a></li>
