@@ -4,6 +4,8 @@
 
 --------------------------------------------------------------------------
   v.3.4-Alpha3 
+	- Added Add buttons to single playlist view, and put the delete 
+		link back for catalogs
 	- Fixed Playlist Play links
 	- Added ability to gather album art for a single catalog at a time
 	- Improved Upgrade Documentation
